--- a/css/style.css
+++ b/css/style.css
@@ -154,13 +154,13 @@ h4 {
 .about {
     padding: 100px 0;
     color: #161616;
-    background-image: url(../Image/Artboard\ 1\ copy.png);
+    /*background-image: url(../Image/Artboard\ 1\ copy.png);
     background-size: cover;
-    /* background-attachment: fixed; */
+    background-attachment: fixed; 
     background-repeat: no-repeat;
     background-position: center;
     background-position-y: top;
-    background-position-x: right;
+    background-position-x: right;*/
 }
 
 .main {
@@ -249,7 +249,7 @@ h4 {
 /* Services */
 .services {
     padding: 50px 0;
-   }
+}
 
 .list{
     display: grid;
